--- a/content/blogs/blog7.Rmd
+++ b/content/blogs/blog7.Rmd
@@ -66,10 +66,8 @@ Besides the obvious variables of `title`, `genre`, `director`, `year`, and `dura
 - `reviews`: the number of reviews for that movie
 - `rating`: IMDB average rating 
 
-## Use your data import, inspection, and cleaning skills to answer the following:
 
-*Are there any missing values (NAs)? Are all entries distinct or are there duplicate entries?*
-```{r skim_data_movies}
+```{r skim_data_movies, results="hide"}
 
 
 skim(movies)
