--- a/content/blogs/blog7.Rmd
+++ b/content/blogs/blog7.Rmd
@@ -50,7 +50,7 @@ library(ggrepel)
 We will look at a subset sample of movies, taken from the [Kaggle IMDB 5000 movie dataset](https://www.kaggle.com/carolzhangdc/imdb-5000-movie-dataset)
 
   
-```{r,load_movies, warning=FALSE, message=FALSE}
+```{r,load_movies, warning=FALSE, message=FALSE, result="hide"}
 
 movies <- read_csv(here::here("data", "movies.csv"))
 glimpse(movies)
